spec/e2e/operator/add_bool_num.lit
true + 123; # error: [line 1] Operands must be two numbers or two strings.
